@@ -1,23 +1,35 @@
 package service;
 
+import okhttp3.HttpUrl;
+import org.apache.http.client.utils.URIBuilder;
+import org.assertj.core.internal.Paths;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 import java.net.MalformedURLException;
+import java.net.URISyntaxException;
 import java.net.URL;
+import java.nio.file.Path;
 
 public interface RESTService {
 
     Logger LOG = LoggerFactory.getLogger("RestClient");
+    String PARAMETER = "/{%s}";
 
-    void authorize();
+    <T> T authorize();
 
-    default  URL getURL(String serviceUrl, String request) {
+    default URL getURL(String serviceUrl, String... request) {
+        URL url = null;
         try {
-            return new URL(serviceUrl + "/" + request);
-        } catch (MalformedURLException e) {
-            LOG.error("URL " + serviceUrl + "/" + request + " is incorrect " + e.getMessage());
-            throw new RuntimeException(e);
+            url = new URIBuilder(serviceUrl).setPathSegments(request).build().toURL();
+        } catch (Exception e) {
+            e.printStackTrace();
         }
+        return url;
+    }
+
+    default String getURLWithParameters(String serviceUrl, String parameterURL, String... request) {
+        URL url = getURL(serviceUrl, request);
+        return url.toString() + String.format(PARAMETER, parameterURL);
     }
 }
